--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,13 +5,13 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
     defaultConfig {
         applicationId "ru.dzgeorgy.examcheat"
         minSdkVersion 23
-        targetSdkVersion 28
-        versionCode 2
-        versionName "1.2"
+        targetSdkVersion 29
+        versionCode 3
+        versionName "1.3"
     }
     buildTypes {
         release {
@@ -25,11 +25,11 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.google.android.support:wearable:2.4.0'
-    implementation 'com.google.android.gms:play-services-wearable:16.0.1'
+    implementation 'com.google.android.gms:play-services-wearable:17.0.0'
     implementation 'androidx.percentlayout:percentlayout:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation 'com.android.support:wear:28.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha06'
+    implementation 'androidx.wear:wear:1.0.0'
     implementation 'com.github.MikeOrtiz:TouchImageView:2.2.0'
     compileOnly 'com.google.android.wearable:wearable:2.4.0'
 }
