--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,12 +22,14 @@ android {
 }
 
 dependencies {
+    implementation 'com.android.support:support-v13:23.1+'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.google.android.support:wearable:2.4.0'
     implementation 'com.google.android.gms:play-services-wearable:17.0.0'
     implementation 'androidx.percentlayout:percentlayout:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation "androidx.viewpager2:viewpager2:1.0.0-rc01"
     implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha06'
     implementation 'androidx.wear:wear:1.0.0'
     implementation 'com.github.MikeOrtiz:TouchImageView:2.2.0'
